--- a/vue-demo/index.html
+++ b/vue-demo/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-
     <title>vue demo</title>
 </head>
+
 <body>
-    
+    <div id="app">
+        {{ message }}
+    </div>
 </body>
+<script src="./dist/bundle.js"></script>
 </html>
+
+<button v-on:click="greet">Greet</button>
+<button @click="greet">Greet</button>
